# dataScienceProject1

./: AI_USAGE.md  README.md  pyproject.toml  streamlit_app.py
config/: config.yaml
dashboards/: app.py
data/processed/: processed_data.csv
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
